--- a/AngularJS/demo-ch01-02.html
+++ b/AngularJS/demo-ch01-02.html
@@ -7,6 +7,7 @@
 	<div ng-controller='HelloController'>
 		<input ng-model='greeting.text'>
 		<p>{{greeting.text}},Alibaba</p>
+		<p>{{user.name}}</p>
 	</div>
 </body>
 </html>
@@ -15,5 +16,6 @@
 	//¿ØÖÆÆ÷
 	function HelloController($scope){
 		$scope.greeting = {text: 'Hello'};
+		$scope.user = {name:'Tom'};
 	}
 </script>
